	The two configuration options cannot be specified together.  In the
	absense of either, rsh is used (the preferred option).  Got rid of 
	-e, -R, and -k options for selecting these at runtime.  Do not use
	rsh for non-root users if --with-krb4 specified.

	Support ssh2's different option for batch mode.

	If --with-machines=/path/to/machines is specified, use that for -a
	processing no matter what.  In the absense of a machines file, if
	SDRGetObjects exists, use that; if nodeattr exists, use that.
	None of the above is a configure error.

	Released version 1.6 to web site: http://www.llnl.gov/icc/lc/pdsh.html
	Released version 1.6-chaos1 internally.

Release 1.6+
	
	Misc cleanup of headers, function defs, README, and man pages.
	Run man pages through autoconf.

	Test HAVE_WORKING_STRERROR_R before using strerror_r (pdsh-1.6 %m 
	fails on AIX).

	Added HAVE_MTSAFE_GETHOSTBYNAME and HAVE_MAGIC_RSHELL_CLEANUP in
	place of #ifdef _AIX.

	Use socklen_t for accept() length argument and add a check in
	autoconf to default it to int if undefined.

	Rcp code now handles short writes on socket.  A short write would
	have corrupted the copied file, though this has never been reported.

	Additional configure options: --with-fanout=N, --with-timeout=N, 
	--with-rangeop=c.  Removed -x and -X options since this is now
	configurable at compile time.

	Print "timed out" message instead of "interrupted system call" if
	xrcmd/qcmd times out waiting for a response from the server (gnats:45).

Thu Apr 11 05:13:08 PDT 2002
	RMS: Get rid of -P and -N options and use RMS_RESOURCEID as set by
	the RMS 'allocate' command instead.

	Change semantics of -n option: now it is tasks per node instead of 
	total number of tasks.  This is no longer a qshell specific argument,
	but unless qshell is used it must be == 1.

Fri May 24 15:06:47 PDT 2002
	Allow hostname ranges in WCOLL files.

	Add -x option to exclude a list of hostnames from WCOLL.